2008-04-20  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #334444

	* em-format-html-display.c: (efhd_attachment_button),
	(efhd_update_bar), (efhd_message_update_bar),
	(efhd_message_add_bar):
	* em-format-html.c: (efh_format_exec):

2008-04-17  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #526739

	* Makefile.am:
	* em-vfs-stream.h:
	* em-vfs-stream.c: Removed from project, not used anywhere.
	* em-menu.c:
	* em-config.c: Do not include gnome-vfs.
	* mail-ops.c: (save_messages_exec), (save_part_exec):
	Changes related to Data Server change of CamelStreamVFS.
	* em-format.c: (em_format_describe_part):
	* em-format-html-display.c: (efhd_bonobo_object), (efhd_find_handler),
	(efhd_use_component), (efhd_bonobo_unknown), (efhd_check_server_prop),
	(efhd_format_attachment): Drop use of deprecated gnome-vfs functions.
	* em-utils.c: (em_utils_snoop_type): Use gio to guess the mime_type.
	* em-popup.c: (emp_apps_open_in), (emp_apps_popup_free),
	(emp_standard_menu_factory): Use gio to fill popup and launch app.

2008-04-16  Shuai Liu  <shuai.liu@sun.com>

	** Fix for bug #528358

	* em-utils.c: (em_utils_save_messages): Use message subject as default
	filename when attempting to 'save message'. 

2008-04-14  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #270406

	* em-folder-properties.c: (struct _prop_data), (emfp_free),
	(add_numbered_row), (emfp_get_folder_item),
	(emfp_dialog_got_folder_quota), (emfp_dialog_got_folder):
	Retrieve quota information for a folder and show it in a dialog.
	* mail-ops.h: (mail_get_folder_quota):
	* mail-ops.c: (struct _get_quota_msg), (get_quota_desc),
	(get_quota_exec), (get_quota_done), (get_quota_free),
	(MailMsgInfo get_quota_info), (mail_get_folder_quota):
	New operation to get folder's quota information.

2008-04-13  Matthew Barnes  <mbarnes@redhat.com>

	* em-folder-browser.c:
	Add an icon for Folder->New.

2008-04-10  Matthew Barnes  <mbarnes@redhat.com>

	* mail-config.glade: